Resolve "Fix alignment for view button in employee summary"

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -362,7 +362,7 @@ select:-webkit-autofill:focus {
 }
 
 .manager {
-    display: none;
+    // display: none;
 }
 
 .superuser {
